# SysPeek

./: .gitignore  README.md  pyproject.toml
docs/: memory.md
scripts/: setup_venv.sh
src/syspeek/: __init__.py  cli.py  reporting.py  theoretical.py
src/syspeek/benchmarks/: __init__.py  base.py  compute_flops.py  latency.py  memory_device.py  memory_hbm.py  memory_transfer.py
src/syspeek/core/: __init__.py  device.py  registry.py  result.py  timing.py
