[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "syspeek"
version = "0.1.0"
description = "Cross-GPU hardware benchmark tool: achieved FLOPS, PCIe/HBM bandwidth, latency. Supports discrete GPUs (e.g. RTX 4070) and Jetson (e.g. Thor)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "torch>=2.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
syspeek = "syspeek.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
